[tool.poetry]
name = "harun-com-tr"
version = "0.0.0"
description = "Scripts for https://harunmistik.com.tr/"
authors = ["Harun <harun@scalzulli.com>"]
license = "CC0-1.0"
readme = "README.md"
packages = [{include = "harun"}]

[tool.poetry.dependencies]
python = "^3.11"
python-frontmatter = "^1.0.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
yapf = "^0.40.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
